<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_client.AddNewClient">

    <ImageView
        android:id="@+id/btBack3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:contentDescription="Back"
        android:elevation="2dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/notifications2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notifications2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:fontFamily="@font/poppins"
        android:text="@string/client_details"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@drawable/background_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/curve_rec_background"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textVi20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/name"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/curve_rec_background"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textiew20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/email"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_email"
                    android:inputType="textPersonName"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/curve_rec_background"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txtView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/address"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_address1"
                    android:inputType="textPersonName"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/editTextAddress2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_address2"
                    android:inputType="textPersonName"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/editTextAddress3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_address3"
                    android:inputType="textPersonName"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/curve_rec_background"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txtVw20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/city"
                    android:textColor="@color/blue" />

                <EditText
                    android:id="@+id/editTextCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/enter_city"
                    android:inputType="textPersonName"
                    android:textColor="@color/blue" />


            </LinearLayout>

            <Button
                android:id="@+id/btSaveClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/curve_rec_background"
                android:backgroundTint="@color/blue"
                android:elevation="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/save_proceed"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>