<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeliveryDetailedOrder">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/curve_rec_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:duplicateParentState="false"
                android:editable="false"
                android:enabled="false"
                android:fontFamily="@font/poppins"
                android:hint="@string/name"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/curve_rec_background"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_client_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:enabled="false"
                android:fontFamily="@font/poppins"
                android:hint="Client's Number"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/curve_rec_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:enabled="false"
                android:fontFamily="@font/poppins"
                android:hint="@string/date"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/curve_rec_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:enabled="false"
                android:fontFamily="@font/poppins"
                android:hint="@string/time"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/curve_rec_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:enabled="false"
                android:fontFamily="@font/poppins"
                android:hint="@string/amount"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:background="@drawable/curve_rec_background">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:enabled="false"
                android:fontFamily="@font/poppins"
                android:hint="@string/milk_quantity"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>